--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0</version>
     </parent>
     <artifactId>stillingar-spring</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>Stillingar - Spring</name>
