--- a/example/pom.xml
+++ b/example/pom.xml
@@ -4,10 +4,11 @@
     <parent>
         <groupId>org.brekka.stillingar</groupId>
         <artifactId>stillingar</artifactId>
-        <version>1.0</version>
+        <version>1.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>stillingar-example</artifactId>
+    <version>1.1.0-SNAPSHOT</version>
 
     <name>Stillingar - Example web application</name>
 
@@ -21,8 +22,6 @@
     </description>
 
     <packaging>war</packaging>
-
-    <version>1.0.2</version>
 
     <inceptionYear>2011</inceptionYear>
 
