--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -6,10 +6,10 @@
         <groupId>org.brekka.stillingar</groupId>
         <artifactId>stillingar</artifactId>
         <relativePath>../pom.xml</relativePath>
-        <version>1.0</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
     <artifactId>stillingar-spring</artifactId>
-    <version>1.0.2</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Stillingar - Spring</name>
