--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <scm>
         <url>https://github.com/brekka/stillingar.git</url>
         <connection>https://github.com/brekka/stillingar.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:brekka/stillingar.git</developerConnection>
     </scm>
     
     <licenses>
