--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>org.brekka.stillingar</groupId>
             <artifactId>stillingar-core</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.2</version>
         </dependency>
 
         <dependency>
