Developer URL still incorrect

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <scm>
         <url>https://github.com/brekka/stillingar.git</url>
         <connection>https://github.com/brekka/stillingar.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com:brekka/stillingar.git</developerConnection>
+        <developerConnection>scm:git:ssh://git@github.com/brekka/stillingar.git</developerConnection>
     </scm>
     
     <licenses>
