--- a/core/pom.xml
+++ b/core/pom.xml
@@ -8,7 +8,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>stillingar-core</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Stillingar - Core</name>
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>org.brekka.stillingar</groupId>
             <artifactId>stillingar-api</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.2</version>
         </dependency>
 
         <dependency>
