--- a/xmlbeans-xpath/pom.xml
+++ b/xmlbeans-xpath/pom.xml
@@ -8,7 +8,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>stillingar-xmlbeans-xpath</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.2</version>
     <packaging>jar</packaging>
 
     <name>Stillingar - XML Beans XPath enhancement</name>
