--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0</version>
     </parent>
     <artifactId>stillingar-spring</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.3</version>
     <packaging>jar</packaging>
 
     <name>Stillingar - Spring</name>
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>org.brekka.stillingar</groupId>
             <artifactId>stillingar-core</artifactId>
-            <version>1.0.3-SNAPSHOT</version>
+            <version>1.0.2</version>
         </dependency>
 
         <dependency>
