Add a Jackson2 based configuration source, bringing in support for JSON.

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <module>xmlbeans</module>
         <module>xmlbeans-xpath</module>
         <module>jaxb</module>
+        <module>jackson</module>
         <module>example</module>
     </modules>
 
