--- a/example/pom.xml
+++ b/example/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.brekka.stillingar</groupId>
         <artifactId>stillingar</artifactId>
-        <version>1.1.0</version>
+        <version>1.1.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>stillingar-example</artifactId>
@@ -36,7 +36,7 @@
     <scm>
         <url>https://github.com/brekka/stillingar.git</url>
         <connection>https://github.com/brekka/stillingar.git</connection>
-      <tag>v1.1.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <developers>
