--- a/xmlbeans-xpath/pom.xml
+++ b/xmlbeans-xpath/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.brekka.stillingar</groupId>
         <artifactId>stillingar</artifactId>
-        <version>1.1.0</version>
+        <version>1.1.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>stillingar-xmlbeans-xpath</artifactId>
@@ -40,7 +40,7 @@
     <scm>
         <url>https://github.com/brekka/stillingar.git</url>
         <connection>https://github.com/brekka/stillingar.git</connection>
-      <tag>v1.1.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <developers>
