--- a/xmlbeans-xpath/pom.xml
+++ b/xmlbeans-xpath/pom.xml
@@ -55,6 +55,12 @@
         <dependency>
             <groupId>org.apache.xmlbeans</groupId>
             <artifactId>xmlbeans</artifactId>
+            <exclusions>
+              <exclusion>
+                <artifactId>stax-api</artifactId>
+                <groupId>stax</groupId>
+              </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 </project>
