--- a/core/pom.xml
+++ b/core/pom.xml
@@ -39,7 +39,7 @@
     <scm>
         <url>https://github.com/brekka/stillingar.git</url>
         <connection>https://github.com/brekka/stillingar.git</connection>
-      <tag>HEAD</tag>
+      <tag>1.2</tag>
   </scm>
 
     <developers>
