--- a/jaxb/pom.xml
+++ b/jaxb/pom.xml
@@ -42,7 +42,7 @@
     <scm>
         <url>https://github.com/brekka/stillingar.git</url>
         <connection>https://github.com/brekka/stillingar.git</connection>
-      <tag>HEAD</tag>
+      <tag>1.2</tag>
   </scm>
 
     <developers>
