--- a/jackson/pom.xml
+++ b/jackson/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.brekka.stillingar</groupId>
     <artifactId>stillingar</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.3.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>stillingar-jackson</artifactId>
@@ -32,7 +32,7 @@
   <scm>
     <url>https://github.com/brekka/stillingar.git</url>
     <connection>https://github.com/brekka/stillingar.git</connection>
-    <tag>1.2</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <developers>
