--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -5,7 +5,7 @@
         <groupId>org.brekka.stillingar</groupId>
         <artifactId>stillingar</artifactId>
         <relativePath>../pom.xml</relativePath>
-        <version>1.2.0</version>
+        <version>1.2.1-SNAPSHOT</version>
     </parent>
     <artifactId>stillingar-spring</artifactId>
     <packaging>jar</packaging>
@@ -44,7 +44,7 @@
     <scm>
         <url>https://github.com/brekka/stillingar.git</url>
         <connection>https://github.com/brekka/stillingar.git</connection>
-      <tag>stillingar-1.2.0</tag>
+      <tag>1.2</tag>
   </scm>
 
     <developers>
