--- a/pom.xml
+++ b/pom.xml
@@ -1,190 +1,191 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.brekka.stillingar</groupId>
-    <artifactId>stillingar</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.brekka.stillingar</groupId>
+  <artifactId>stillingar</artifactId>
+  <version>1.3.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
-    <name>Stillingar - Root</name>
+  <name>Stillingar - Root</name>
 
-    <description>
-        Stillingar is a configuration framework for Java applications. It supports runtime reloading of configuration files,
-        which can consist of XML or properties files. When used in a Spring environment, configuration values can be autowired by
-        expression or if XMLBeans/JAXB are used, by type.
-        
-        This project is the root of the Stillingar framework, defining the environment and dependency versions for the given release.
-    </description>
-
-    <inceptionYear>2011</inceptionYear>
-
-    <url>https://github.com/brekka/stillingar/wiki</url>
-
-    <scm>
-        <url>https://github.com/brekka/stillingar.git</url>
-        <connection>https://github.com/brekka/stillingar.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/brekka/stillingar.git</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
+  <description>
+    Stillingar is a configuration framework for Java applications. It supports runtime reloading of configuration files,
+    which can consist of XML or properties files. When used in a Spring environment, configuration values can be autowired by
+    expression or if XMLBeans/JAXB are used, by type.
     
-    <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
+    This project is the root of the Stillingar framework, defining the environment and dependency versions for the given release.
+  </description>
 
-    <developers>
-        <developer>
-            <name>Andrew Taylor</name>
-            <email>andrew@brekka.org</email>
-            <timezone>GMT</timezone>
-        </developer>
-    </developers>
+  <inceptionYear>2011</inceptionYear>
 
-    <distributionManagement>
-        <repository>
-            <id>brekka.org</id>
-            <url>https://brekka.org/maven/content/repositories/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>brekka.org</id>
-            <url>https://brekka.org/maven/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
+  <url>https://github.com/brekka/stillingar/wiki</url>
 
-    <modules>
-        <module>api</module>
-        <module>core</module>
-        <module>spring</module>
-        <module>xmlbeans</module>
-        <module>xmlbeans-xpath</module>
-        <module>jaxb</module>
-        <module>jackson</module>
-        <module>example</module>
-    </modules>
+  <scm>
+    <url>https://github.com/brekka/stillingar.git</url>
+    <connection>https://github.com/brekka/stillingar.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/brekka/stillingar.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <encoding>utf-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.5</version>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.5.2</version>
-            </plugin>
-        </plugins>
-    </build>
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <!-- Only used in XMLBeans based configuration loader. -->
-                <groupId>org.apache.xmlbeans</groupId>
-                <artifactId>xmlbeans</artifactId>
-                <version>${xmlbeans-version}</version>
-            </dependency>
-            <dependency>
-                <!-- Provide support for Joda-Time in type conversions. -->
-                <groupId>joda-time</groupId>
-                <artifactId>joda-time</artifactId>
-                <version>${joda-time-version}</version>
-                <optional>true</optional>
-            </dependency>
-            <dependency>
-                <!-- Needed to support type conversion of xsd:base64binary in DOM based operations. XMLBeans/JAXB take care 
-                    of this themselves. -->
-                <groupId>net.iharder</groupId>
-                <artifactId>base64</artifactId>
-                <version>${base64-version}</version>
-                <optional>true</optional>
-            </dependency>
+  <developers>
+    <developer>
+      <name>Andrew Taylor</name>
+      <email>andrew@brekka.org</email>
+      <timezone>GMT</timezone>
+    </developer>
+  </developers>
 
-            <!-- Test -->
-            <dependency>
-                <groupId>commons-lang</groupId>
-                <artifactId>commons-lang</artifactId>
-                <version>${commons-lang-version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>${junit-version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-test</artifactId>
-                <version>${spring-release-version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.mockito</groupId>
-                <artifactId>mockito-all</artifactId>
-                <version>${mockito-version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>commons-io</groupId>
-                <artifactId>commons-io</artifactId>
-                <version>${commons-io-version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
-                <version>${log4j-version}</version>
-                <scope>test</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+  <distributionManagement>
+    <repository>
+      <id>brekka.org</id>
+      <url>https://brekka.org/maven/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>brekka.org</id>
+      <url>https://brekka.org/maven/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <base64-version>2.3.8</base64-version>
-        <commons-lang-version>2.6</commons-lang-version>
-        <commons-io-version>2.4</commons-io-version>
-        <joda-time-version>2.4</joda-time-version>
-        <log4j-version>1.2.17</log4j-version>
-        <spring-release-version>3.0.7.RELEASE</spring-release-version>
-        <xmlbeans-version>2.4.0</xmlbeans-version>
-        <!-- Test only dependencies -->
-        <junit-version>4.11</junit-version>
-        <mockito-version>1.9.5</mockito-version>
-    </properties>
+  <modules>
+    <module>api</module>
+    <module>core</module>
+    <module>spring</module>
+    <module>xmlbeans</module>
+    <module>xmlbeans-xpath</module>
+    <module>jaxb</module>
+    <module>jackson</module>
+    <module>example</module>
+  </modules>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+          <encoding>utf-8</encoding>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.2.1</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.9</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5</version>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.5.2</version>
+      </plugin>
+    </plugins>
+  </build>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <!-- Only used in XMLBeans based configuration loader. -->
+        <groupId>org.apache.xmlbeans</groupId>
+        <artifactId>xmlbeans</artifactId>
+        <version>${xmlbeans-version}</version>
+      </dependency>
+      <dependency>
+        <!-- Provide support for Joda-Time in type conversions. -->
+        <groupId>joda-time</groupId>
+        <artifactId>joda-time</artifactId>
+        <version>${joda-time-version}</version>
+        <optional>true</optional>
+      </dependency>
+      <dependency>
+        <!-- Needed to support type conversion of xsd:base64binary in DOM based operations. XMLBeans/JAXB take care of this 
+          themselves. -->
+        <groupId>net.iharder</groupId>
+        <artifactId>base64</artifactId>
+        <version>${base64-version}</version>
+        <optional>true</optional>
+      </dependency>
+
+      <!-- Test -->
+      <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>${commons-lang-version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>${junit-version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>${spring-release-version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-all</artifactId>
+        <version>${mockito-version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>${commons-io-version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>${log4j-version}</version>
+        <scope>test</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <base64-version>2.3.8</base64-version>
+    <commons-lang-version>2.6</commons-lang-version>
+    <commons-io-version>2.4</commons-io-version>
+    <joda-time-version>2.4</joda-time-version>
+    <log4j-version>1.2.17</log4j-version>
+    <spring-release-version>3.0.7.RELEASE</spring-release-version>
+    <xmlbeans-version>2.4.0</xmlbeans-version>
+    <!-- Test only dependencies -->
+    <junit-version>4.11</junit-version>
+    <mockito-version>1.9.5</mockito-version>
+  </properties>
 
 </project>
